--- a/src/package.json
+++ b/src/package.json
@@ -17,7 +17,8 @@
     "moment-timezone": "^0.5.28",
     "request": "^2.88.2",
     "request-promise": "^4.2.5",
-    "trash-common": "git+https://github.com/quotto/throwtrash-common-module.git#v1.1.1"
+    "trash-common": "git+https://github.com/quotto/throwtrash-common-module.git#v1.1.1",
+    "what-the-pack": "^2.0.3"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
